// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the project name 1`] = `
"<div style=\\"padding-top: 8px;\\">
      <span>project_name Quality Gate</span>
      <span style=\\"background-color: #d4333f;
      padding: 4px 12px;
      color: #fff;
      letter-spacing: 0.02em;
      line-height: 24px;
      font-weight: 600;
      font-size: 12px;
      margin-left: 15px;\\">
        Failed
      </span>
    </div> 
<table border=\\"0\\" style=\\"
      margin-top: 8px;
      border-top: 1px solid #eee;
      border-collapse: separate;
      border-spacing: 0 4px;
    \\">
      <tbody>
        <tr>
        <td><span style=\\"padding-right:4px;\\">Bugs</span></td>
        <td style=\\"text-align:center; color:#fff; background-color:#d4333f;\\">
          <span style=\\"padding:0px 4px; line-height:20px;\\">1</span>
        </td>
        <td>
          <span style=\\"padding-left:4px\\">&#62;</span>
          <span style=\\"padding-left:4px\\">0</span>
        </td>
      </tr>
      </tbody>
    </table>

 
[Detailed SonarQube report &gt;](https://dashboard.url)"
`;

exports[`should generate a green analysis status 1`] = `
"<div style=\\"padding-top: 8px;\\">
      <span>Quality Gate</span>
      <span style=\\"background-color: #b4b4b4;
      padding: 4px 12px;
      color: #fff;
      letter-spacing: 0.02em;
      line-height: 24px;
      font-weight: 600;
      font-size: 12px;
      margin-left: 15px;\\">
        SUCCESS
      </span>
    </div> 
 
[Detailed SonarQube report &gt;](https://dashboard.url)"
`;

exports[`should generate an analysis status with error 1`] = `
"<div style=\\"padding-top: 8px;\\">
      <span>Quality Gate</span>
      <span style=\\"background-color: #d4333f;
      padding: 4px 12px;
      color: #fff;
      letter-spacing: 0.02em;
      line-height: 24px;
      font-weight: 600;
      font-size: 12px;
      margin-left: 15px;\\">
        Failed
      </span>
    </div> 
<table border=\\"0\\" style=\\"
      margin-top: 8px;
      border-top: 1px solid #eee;
      border-collapse: separate;
      border-spacing: 0 4px;
    \\">
      <tbody>
        <tr>
        <td><span style=\\"padding-right:4px;\\">Bugs</span></td>
        <td style=\\"text-align:center; color:#fff; background-color:#d4333f;\\">
          <span style=\\"padding:0px 4px; line-height:20px;\\">1</span>
        </td>
        <td>
          <span style=\\"padding-left:4px\\">&#62;</span>
          <span style=\\"padding-left:4px\\">0</span>
        </td>
      </tr>
      </tbody>
    </table>

 
[Detailed SonarQube report &gt;](https://dashboard.url)"
`;

exports[`should not fail when metrics are missing 1`] = `
"<div style=\\"padding-top: 8px;\\">
      <span>Quality Gate</span>
      <span style=\\"background-color: #d4333f;
      padding: 4px 12px;
      color: #fff;
      letter-spacing: 0.02em;
      line-height: 24px;
      font-weight: 600;
      font-size: 12px;
      margin-left: 15px;\\">
        Failed
      </span>
    </div>"
`;
